[project]
name = "data-synthesis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "copulas>=0.12.3",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wfdb>=4.3.0",
]
